# sglang

./: .gitignore
.github/workflows/: pr-test-rust.yml
benchmark/multi_turn_chat/: README.md  bench_router_responses.py  test_router_responses.py
python/sglang/srt/: environ.py
python/sglang/srt/distributed/: parallel_state.py
scripts/myelon/: README.md  analyze_ipc_jsonl.py  bench_shm_broadcast.py  repeat_bench_one_batch_server.py  run_tp8_multiturn_baseline.sh  run_tp8_request_fanout_benchmark.sh  summarize_transport_comparison.py
scripts/pp_test_suite/: 01_baseline_recv_timing.py  02_decode_microbench.py  04_run_all.sh  05_compare_results.py  OPTION_A_ANALYSIS.md  README.md
sgl-model-gateway/: Cargo.toml
sgl-model-gateway/benches/: ws_response_hotpath.rs
sgl-model-gateway/e2e_test/: README.md  conftest.py  pyproject.toml
sgl-model-gateway/e2e_test/benchmarks/: bfcl_subset.py  frozen_tool_transcripts.py  run_b200_ws_matrix.py  test_bfcl_subset_utils.py  test_frozen_tool_transcripts.py  test_ws_bench_helpers.py  test_ws_microbench.py
sgl-model-gateway/e2e_test/benchmarks/data/: bfcl_multi_turn_subset.json  frozen_tool_transcript_subset.json
sgl-model-gateway/e2e_test/infra/: gateway.py  model_pool.py  model_specs.py
sgl-model-gateway/e2e_test/responses/: test_local_smoke.py
sgl-model-gateway/src/: bench_support.rs  server.rs
sgl-model-gateway/src/routers/: mod.rs  responses_validation.rs  router_manager.rs  ws_responses.rs
sgl-model-gateway/tests/api/: api_endpoints_test.rs  responses_ws_test.rs
test/cuda_kernels/broker/: Makefile  benchmark_quick  benchmark_quick.cu  test_broker_queue  test_broker_queue.cu  test_count_logic  test_count_logic.cu  test_minimal  test_minimal.cu  test_simple  test_simple.cu  test_simple2  test_simple2.cu  test_v2  test_v2.cu  test_warp  test_warp.cu
(+20 files in other folders)
